# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 
+use App\Http\Controllers\Api\V1\Admin\AdminController;
 use App\Http\Controllers\Api\V1\AuthController;
 use Illuminate\Support\Facades\Route;
 
@@ -18,5 +19,11 @@ Route::prefix('v1')->group(function (): void {
     Route::controller(AuthController::class)->prefix('auth')->group(function (): void {
         Route::post('login', 'login');
         Route::get('logout', 'logout')->middleware('auth:api_jwt');
+    });
+    Route::prefix('admin')
+        ->middleware(['auth:api_jwt','verifyIsAdmin'])->group(function (){
+            Route::controller(AdminController::class)->group(function (){
+                Route::post('create','create');
+            });
     });
 });
